--- a/cross-hair.html
+++ b/cross-hair.html
@@ -1,28 +1,20 @@
-<!--
-CUSTOM ELEMENT: cross-hair
-BY: DM
-
-Displays a cross-hair graphic rendered in svg. It has the following properties:
-	x,y,w,left,top
--->
-
 <link rel="import" href="bower_components/polymer/polymer.html">
 
 <dom-module id="cross-hair">
-
-<template>
 <style type="text/css">
-	:host {
-		position: absolute;
-		top: 0px;
-		left: 0px;
-		height: 100%;
-		width: 100%;
-		overflow: hidden;
-	}
+:host {
+position: absolute;
+top: 0px;
+left: 0px;
+height: 100%;
+width: 100%;
+overflow: hidden;
+}
 </style>
-<svg></svg></template>
+<template><svg></svg></template>
 <script>
+"use strict";
+
 Polymer({
 	is: 'cross-hair',
 	properties:{
@@ -54,42 +46,42 @@ Polymer({
 		r: {
 			type: Number,
 			value: 6,
-			notify: true,
-			reflectToAttribute: true
+			notify: true
 		},
-		showBars: {
+		show_bars: {
 			type: Number,
 			value: 1,  //1=horizontal, 2=vertical 3=both (only 1 is implemented)
-			notify: true,
-			reflectToAttribute: true
+			notify: true
 		},
 	},
 	observers: [
-		'_updateSVG(x,y,w,left,top,r,showBars)'
+		'_update_svg(x, y, w, left, top, r, show_bars)'
 	],
-	setXY: function(x,y){ 
-		//better than setting x and y separately, well not really...
-		this.set('x', x);
-		this.set('y', y);
-	},
-	setLeftTop: function(left,top){
-		//better than setting left and top separately, well not really...
-		this.set('left', left);
-		this.set('top', top);
-	},
-	_updateSVG: function(x,y,w,left,top,r,showBars){
-		var svg = "<svg style='pointer-events:none;position:absolute;left:" + left + "px;top:" + top + "px;width:" + (showBars & 1 ? w : x+r+2 )+ "px;height:" + (y+r+2) + "px' xmlns='http://www.w3.org/2000/svg' version='1.1'>"
-				+ "<circle cx='" + x + "' cy='" + y + "' r='" + r + "' stroke='black' stroke-width='1' fill='none'/>"
-				+ "<circle cx='" + x + "' cy='" + y + "' r='" + r + "' stroke='white' stroke-dasharray='2,2' stroke-width='1' fill='none'/>"
-				+ (showBars & 1 ?
-					  "<line x1='" + 0 + "' y1='" + y + "' x2='" + (x-r) + "' y2='" + y + "' stroke='black' stroke-width='1'/>"
-					+ "<line x1='" + w + "' y1='" + y + "' x2='" + (x+r) + "' y2='" + y + "' stroke='black' stroke-width='1'/>"
-					+ "<line x1='" + 0 + "' y1='" + y + "' x2='" + (x-r) + "' y2='" + y + "' stroke='white' stroke-dasharray='2,2' stroke-width='1'/>"
-					+ "<line x1='" + w + "' y1='" + y + "' x2='" + (x+r) + "' y2='" + y + "' stroke='white' stroke-dasharray='2,2' stroke-width='1'/>"
-				  : "")
-				+ "</svg>";
-		Polymer.dom(this.root).innerHTML = svg;
-		Polymer.dom.flush();
+	_update_svg: function(x, y , w, left, top, r, show_bars){
+		this.debounce('update', function(){
+			let width = show_bars & 1 ? w : x+r+2;
+			let height = y+r+2;
+			let x_minus_r = x-r;
+			let x_plus_r = x+r;
+
+			let bars_1 = "";
+			if(show_bars & 1){
+				 bars_1 = `<line x1='0'    y1='${y}' x2='${x_minus_r}' y2='${y}' stroke='black' stroke-width='1'/>
+						   <line x1='${w}' y1='${y}' x2='${x_plus_r}'  y2='${y}' stroke='black' stroke-width='1'/>
+						   <line x1='0'    y1='${y}' x2='${x_minus_r}' y2='${y}' stroke='white' stroke-dasharray='2,2' stroke-width='1'/>
+						   <line x1='${w}' y1='${y}' x2='${x_plus_r}'  y2='${y}' stroke='white' stroke-dasharray='2,2' stroke-width='1'/>`
+			}
+
+			// TODO: add show_bars & 2
+
+			let svg = `<svg style='pointer-events:none;position:absolute;left:${left}px;top:${top}px;width:${width};height:${height}px;'
+						 xmlns='http://www.w3.org/2000/svg' version='1.1'>
+								<circle cx='${x}' cy='${y}' r='${r}' stroke='black' stroke-width='1' fill='none'/>
+							    <circle cx='${x}' cy='${y}' r='${r}' stroke='white' stroke-dasharray='2,2' stroke-width='1' fill='none'/>
+							    ${bars_1}</svg>`;
+			Polymer.dom(this.root).innerHTML = svg;
+			Polymer.dom.flush();
+		});
 	}
 });
 </script>
